--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 dokończyć responsywne menu z animacjami z filmiku na yt
+musi zawierać o mnie, kontakt, sociale, podgląd CV na stronie
 uzupełnić zawartość strony głównej
 dodać odpowiednie linki do github, fb, telegram
 utworzyć kolejne podstrony
