--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 dokończyć responsywne menu z animacjami z filmiku na yt
-musi zawierać o mnie, kontakt, sociale, podgląd CV na stronie
+musi zawierać o mnie, kontakt, sociale, podgląd CV na stronie, inne projekty
 uzupełnić zawartość strony głównej
 dodać odpowiednie linki do github, fb, telegram
 utworzyć kolejne podstrony
